# pixskin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: LIBRARY_SUMMARY.md  README.md
pixskin/: __init__.py  core.py  utils.py
pixskin/modules/: __init__.py  finetuning.py  input.py  resize.py
src/: entry.py  main.py
tests/: test_batch.py  test_main.py  test_single.py
